# SDLPlatformer

./: .gitignore  CMakeLists.txt  README.md  SDLPlatformer.sln
SDLPlatformer/: Chunk.cpp  Chunk.hpp  Player.cpp  Player.hpp  RenderWindow.hpp  SDLPlatformer.vcxproj  SDLPlatformer.vcxproj.filters  Utils.cpp  Utils.hpp  World.cpp  World.hpp  camera.cpp  camera.hpp  enemy.cpp  enemy.hpp  enitity.cpp  main.cpp  math.hpp  noise.cpp  noise.hpp  renderwindow.cpp  temporay.cpp
src/: CollisionSide.hpp  Player.cpp  Player.hpp  RenderWindow.hpp  World.hpp  enemy.hpp  entity.hpp  main.cpp  renderwindow.cpp
